bynkc/tests/fixtures/positive/354_test_refined_literal_arg/src/greet/text.bynk
commons greet.text {
  type Subject = String where NonEmpty && MaxLength(40)

  fn greeting(subject: Subject) -> String {
    "Hello, \(subject)!"
  }
}
