bynkc/tests/fixtures/negative/343_oidc_missing_audience/src/demo.bynk
context demo

type UserId = String where NonEmpty

actor User { auth = Oidc(issuer = "https://issuer.example", jwks = "https://issuer.example/jwks"), identity = UserId }
